--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>My Portfolio</title>
+  <title>Adniya Yousaf</title>
   <meta name="description" content="The technical portfolio of trainee name" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- suppress FOUC-->
@@ -119,14 +119,14 @@
           </div>
         </div>
         <div class="project-item">
-          <img class="project-img" src="/preview.jpg" alt="desktop-preview" />
+          <img class="project-img" src="/7.jpg" alt="desktop-preview" />
           <div class="project-card">
-            <h4 class="project-heading">Interactive rating component</h4>
+            <h4 class="project-heading">Insure landing page</h4>
             <p class="project-description">
-              A feedback application.This is a nice, small project to practice
-              handling user interactions and updating the DOM
+              A landing page, nice and small project to practice
+              handling user interactions and updating the DOM.
             </p>
-            <a class="project-link" href="https://venerable-rugelach-2f2606.netlify.app/">View Project
+            <a class="project-link" href="https://grand-khapse-93aa1d.netlify.app/">View Project
               <span class="arrow"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
                   <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                   <path
