fix: set alt description

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <div class="project__container">
         <div class="project-item">
-          <img class="project-img" src="/desktop-preview.jpg" alt="desktop-preview" />
+          <img class="project-img" src="/desktop-preview.jpg" alt="First Project desktop-preview" />
           <div class="project-card">
             <h4 class="project-heading">Huddle landing page</h4>
             <p class="project-description">
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="project-item">
-          <img class="project-img" src="/7.jpg" alt="desktop-preview" />
+          <img class="project-img" src="/7.jpg" alt="Second project desktop-preview" />
           <div class="project-card">
             <h4 class="project-heading">Insure landing page</h4>
             <p class="project-description">
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="project-item">
-          <img class="project-img" src="/1.png" />
+          <img class="project-img" src="/1.png" alt="Third project image"/>
           <div class="project-card">
             <h4 class="project-heading">Portfolio</h4>
             <a class="project-link" href="https://adniyayousaf.netlify.app/">View Project
