--- a/resume.html
+++ b/resume.html
@@ -93,7 +93,7 @@
                         <span class="present">2022-Present</span>
                         <p class="j">Glasgow Kelvin College.</p><br>
                         <p class="c">Glasgow-Scotland,United-Kingdom.</p><br>
-                        <p class="c">NQ CyberSecurity & Networking.</p><br>
+                        <p class="c">SCQF 6 | 7 CyberSecurity & Networking.</p><br>
                         <p class="p">I acquired and gained alot of experiences in Networking & cybersecurity.<br><br>
                             I acquired and gained alot of experiences in computing such as Microsoft word,Mocrosoft
                             excel and Microsoft PowerPoint.<br><br>
@@ -262,7 +262,7 @@
                             <span class="resume-present">2022-Present</span>
                             <p class="resu-job">Glasgow Kelvin College</p>
                             <p class="cop-name">Glasgow-Scotland,<br>United-Kingdom</p>
-                            <p class="cop-name">NQ CyberSecurity & Networking</p>
+                            <p class="cop-name">SCQF 6 | 7 CyberSecurity & Networking</p>
                         </div>
                         <div class="re-par">
                             <p class="resume-parat"> I acquired and gained alot of experiences in Networking &
@@ -318,7 +318,7 @@
                     <p class="entre">Digital Analytics</p>
                     <h5 class="honor">Honors & Awards</h5>
                     <p class="entre">Bachelor Degree(Bsc,Banking and Finance)</p>
-                    <p class="entre">NQ (CyberSecurity and Networking)</p>
+                    <p class="entre">SCQF 6 Networking and CyberSecurity</p>
                     <p class="entre">Cisco IT Essential,PC Hardware & Software</p>
                     <p class="entre">Full Stack(Software-Development)</p>
                 </article>
