--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             developing innovative websites and applications.<br><br>
 
             In 2023, I was awarded a certificate from Code Your Future as a Software Developer.<br><br>
-            In 2023, I was awarded a certificte from Glasgow Kelvin College in Cybersecurity and Networking.<br><br>
+            In 2023, I was awarded a certificte from Glasgow Kelvin College in Networking and CyberSecurity.<br><br>
             In 2023, I was awarded a certificate from Cisco Networking Academy IT Essential in PC hardware and
             Software.<br><br>
             In 2004, I had my first degree in Banking and finance from Olabisi Onabanjo University Ogun State
             Nigeria.<br><br>
-            My passion for Software Development, cybersecurity and Networking is unconditional and I have always had a
+            My passion for Software Development, Networking and CyberSecurity is unconditional and I have always had a
             keen interest in knowing
             what is happening in the Information technology business environment as a whole;that is why I have decided
             to applied
@@ -229,12 +229,12 @@
             developing innovative websites and applications.<br><br>
 
             In 2023, I was awarded a certificate from Code Your Future as a Software Developer.<br><br>
-            In 2023, I was awarded a certificte from Glasgow Kelvin College in Cybersecurity and Networking.<br><br>
+            In 2023, I was awarded a certificte from Glasgow Kelvin College in Networking and CyberSecurity.<br><br>
             In 2023, I was awarded a certificate from Cisco Networking Academy IT Essential in PC hardware and
             Software.<br><br>
             In 2004, I had my first degree in Banking and finance from Olabisi Onabanjo University Ogun State
             Nigeria.<br><br>
-            My passion for Software Development, cybersecurity and Networking is unconditional and I have always had a
+            My passion for Software Development, Networking and CyberSecurity is unconditional and I have always had a
             keen interest
             in knowing
             what is happening in the Information technology business environment as a whole;that is why I have decided
