--- a/resume.html
+++ b/resume.html
@@ -262,7 +262,7 @@
                             <span class="resume-present">2022-Present</span>
                             <p class="resu-job">Glasgow Kelvin College</p>
                             <p class="cop-name">Glasgow-Scotland,<br>United-Kingdom</p>
-                            <p class="cop-name">SCQF 6 | 7 CyberSecurity & Networking</p>
+                            <p class="cop-name">SCQF 6 | 7 Networking & CyberSecurity</p>
                         </div>
                         <div class="re-par">
                             <p class="resume-parat"> I acquired and gained alot of experiences in Networking &
