--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <option value="#">Other-Projects</option>
                   <option value="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Hotel-Project</option>
                   <option value="https://tosin-chat-app.netlify.app/" target="_blank">My Chat App</option>
-                  <option value="https://full-stack-db-react-video-app.netlify.app/" target="_blank">My youtube_Videos</option>
+                  <option value="https://full-stack-db-react-video-app.netlify.app/" target="_blank">My Video_Recommendation</option>
                   <option value="https://tosyn-react-tv-project.netlify.app/" target="_blank">My TV Project</option>
                   <option value="https://hotel-react-server-app.netlify.app/" target="_blank">My Hotel_Booking_App</option>
                 </select>
