Changed the basic info about me

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Welcome to Afsha's Portfolio</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -50,12 +50,13 @@
     <main tabindex="0">
       <section id="about">
         <header><h2>About Me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <ul>
+          <li>I live in London</li>
+          <li>I am a web designer and developer</li>
+          <li>I am
+          currently getting trained at Code Your Future to become a software
+          developer</li>
+        </ul>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
