--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="The technical portfolio of trainee name"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/public/output.css" rel="stylesheet" />
     <!-- suppress FOUC-->
     <style>
       html {
@@ -38,7 +39,7 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to Afsha's Portfolio</h1>
+      <h1>Welcome to Afsha's Portfolio !</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -48,14 +49,15 @@
       </nav>
     </header>
     <main tabindex="0">
-      <section id="about">
+      <section id="about" class="bg-red-400">
         <header><h2>About Me</h2></header>
         <ul>
           <li>I live in London</li>
           <li>I am a web designer and developer</li>
-          <li>I am
-          currently getting trained at Code Your Future to become a software
-          developer</li>
+          <li>
+            I am currently getting trained at Code Your Future to become a
+            software developer
+          </li>
         </ul>
       </section>
       <section id="projects">
