--- a/Elmira-Zangeneh-portfolio/index.html
+++ b/Elmira-Zangeneh-portfolio/index.html
@@ -38,7 +38,10 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <div class="header">
+        <img src="img/Elmira_logo.png" alt="">
+        <h1>Welcome To My Portfolio </h1>
+      </div>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -48,56 +51,54 @@
       </nav>
     </header>
     <main tabindex="0">
-      <section id="about">
-        <header><h2>About Me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+      <section class="aboutme">
+        <div>
+          <header>
+            <h2>About Me</h2>
+          </header>
+          <p>
+            I am Elmira Zangeneh
+            I'm a new developer
+            This is my simple web page !
+            It's so wonderful that I can learn new things such as coding by computer.
+            This Is Really Challenging. Ambition is the path to success.
+            Ambition is the path to success. Persistence is the vehicle you arrive in...
+            I'm really interested in learning web developing.
+            nd I try to do my best in designing and coding the websites.
+            It's great to see how I can build websites and improve in this field.
+            I hope I will be a great programmer oneday.
+          </p>
+        </div>
+        <div>
+          <img id="info_img" src="img/vector-female-developer.jpg" alt="">
+        </div>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
-        <ul class="showcase">
-          <li class="showcase__item project">
-            <h3 class="project__heading"><a href="https://github.com/CodeYourFuture/HTML-CSS-Challenges-Solution">T-Shirt Order Form</a></h3>
-            <div class="project__blurb">
-              <p>This was exactly as it says: a t-shirt order form, in HTML and CSS. This text is copy-pasted.</p>
-            <p>
-              In this project I learned a whole bunch of foundational principles
-              for front end: I learned how to structure data formally with
-              modern native form inputs, and how to <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation">validate that data client-side</a> with HTML5
-              attributes. The brief was fairly open - the design is all mine,
-              but the Acceptance Criteria was strict: I had to deliver a perfect
-              score in <a href="https://developer.chrome.com/docs/lighthouse/overview/">Lighthouse</a>, and meet some other validation constraints.
-            </p>
-            <p>
-              I spent a lot of time testing my code with <a href="https://developer.chrome.com/docs/devtools/">Devtools</a> and thinking
-              carefully about the semantics of the copy pasted DOM. I also explored the <a href="https://developer.chrome.com/docs/devtools/coverage/">
-              Coverage</a> evaluator and used it to improve my CSS: only delivering
-              precisely what my design needed and no excess code.
-            </p>
-            </div>
-            <picture class="project__picture">
-              <source
-                srcset="https://picsum.photos/seed/picsum/600/600"
-                type="image/webp"
-              />
-              <img
-                src="https://picsum.photos/seed/picsum/600/600"
-                alt="Screenshot of my page showing a form for ordering t-shirts"
-              />
-          </li>
-        </ul>
+        </section>
+        <section class="project">
+          <h3>My Project</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, numquam.</p>
+          <div class="project_container">
+          <div class="project_item">
+            <a href="#"><img src="img/female-developer-vector (1).jpg" alt=""></a>
+            <h4>Healthy Page</h4>
+          </div>
+          <div class="project_item">
+            <a href="#"><img src="img/woman-programmer-working-on-a-new-project-free-vector.jpg" alt=""></a>
+            <h4>Healthy Page</h4>
+          </div>
+          <div class="project_item">
+            <a href="#"><img src="img/istockphoto-1306190794-612x612.jpg" alt=""></a>
+            <h4>Healthy Page</h4>
+          </div>
+        </div>
       </section>
+      <br><br><br>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          You Can Contact Me Through Blow Icons...
         </p>
       </section>
     </main>
