--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>My Portfolio</title>
-    <meta
-      name="description"
-      content="The technical portfolio of trainee name"
-    />
+    <meta name="description" content="The technical portfolio of Karam Ali" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- suppress FOUC-->
     <style>
@@ -38,7 +35,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Karam Ai</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,31 +48,37 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          I'm Karam a passionate and dedicated self thought front-end web
+          developer. What draws me to front-end development is the opportunity
+          to transform complex ideas into elegant and accessible digital
+          solutions.I like solving intricate puzzles that require logical
+          thinking and creative problem-solving, I see frontend development as a
+          series of puzzles that I enjoy solving.I enjoy piecing together
+          code, design elements, and functionality to craft cohesive and
+          captivating platforms. I consider myself a very responsible and
+          dedicated person. I can overcome any obstacles to the best of my
+          ability and to share my findings and bring strong energy. I'm honest,
+          resourceful, solution-oriented, and strive to create flawless and
+          user-centric web experiences.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          This is a project I made using a sketch wire frame provided from
+          CodeYourFuture to build a web page similar to the sketch.
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Thank you for the time that you took to view my Portfolio. I hope it
+          was worth it. if anything please feel free to leave a comment or
+          contact me in any of the contact list below.
         </p>
       </section>
     </main>
+
     <footer>
       <h3>
         <a href="https://github.com/CodeYourFuture/Portfolio"
