--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Junior Developer</title>
+  <title>Bahadory- Junior Developer</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header>
     <nav>
       <div class="container">
-        <h1>Your Name</h1>
+        <h1>BAHADOR</h1>
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -25,6 +25,7 @@
       <h2>About Me</h2>
       <p>Welcome to my portfolio website! I am a junior developer passionate about creating web applications that are both functional and visually appealing.</p>
     </div>
+    
   </section>
 
   <section id="projects" class="section">
@@ -32,12 +33,12 @@
       <h2>Projects</h2>
       <div class="project">
         <h3>Project 1</h3>
-        <p>Description of Project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Description of Project 1. .</p>
         <a href="#">View Project</a>
       </div>
       <div class="project">
         <h3>Project 2</h3>
-        <p>Description of Project 2. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Description of Project 2. .</p>
         <a href="#">View Project</a>
       </div>
       <!-- Add more projects here -->
@@ -48,13 +49,13 @@
     <div class="container">
       <h2>Contact Me</h2>
       <p>If you'd like to get in touch, feel free to reach out to me at:</p>
-      <p>Email: your.email@example.com</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile/">linkedin.com/in/yourprofile</a></p>
+      <p>Email: ahmadzaybahadory@gmail.com</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile/">linkedin.com</a></p>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
+    <p>&copy; 2023 bahadory. All rights reserved.</p>
   </footer>
 </body>
 </html>
