--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h2>Projects</h2>
       <div class="project">
         <h3>Project 1</h3>
-        <p>Description of Project 1. .</p>
+        <p>Description of Project 1</p>
         <a href="#">View Project</a>
       </div>
       <div class="project">
