--- a/project.html
+++ b/project.html
@@ -68,6 +68,7 @@
                             <ul class="exp-list" id="expenses-list-mo"></ul>
                             <p class="bal-total">Balance:<span id="balance-mo">0</span></p>
                             <button class="mobile-submit-btn" id="button-mo">Submit</button>
+                            <button class="clear-btn" id="clear-btn-mo">Clear All</button>
                         </div>
 
                         <p>
