add a piture of myself

--- a/Aisha-Athman-Lali-Portfolio/index.html
+++ b/Aisha-Athman-Lali-Portfolio/index.html
@@ -38,6 +38,7 @@
   </head>
   <body>
     <header>
+      <img src="/images/aisha.jpg">
       <h1>Aisha Athman Lali</h1>
       <nav>
         <ul>
