add styles on header

--- a/Aisha-Athman-Lali-Portfolio/index.html
+++ b/Aisha-Athman-Lali-Portfolio/index.html
@@ -38,8 +38,6 @@
   </head>
   <body>
     <header>
-      <img src="/images/aisha.jpg">
-      <h1>Aisha Athman Lali</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -47,16 +45,20 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <h1>AISHA ATHMAN LALI</h1>
     </header>
-    <main tabindex="0">
-      <section id="about">
-        <header><h2>About Me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
+    <main>
+      <section class="about-me">
+        <div>
+          <img class="my-image" src="/images/aisha.jpg">
+        </div>
+        <div>
+          <h2>About Me</h2></header>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
           excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
           commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+          amet consectetur?</p>
+        </div>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
