--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <meta
       name="description"
-      content="The technical portfolio of trainee name"
+      content="The technical portfolio of Afsha"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/public/output.css" rel="stylesheet" />
@@ -39,36 +39,48 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-cyan-100 m-5">
-    <header class="flex flex-col bg-white m-0">
-      <h1 class="text-lg font-bold mt-2 header-title">
+  <body class="bg-cyan-100 mx-auto">
+    <header class="flex flex-col font-bold bg-white mt-1 p-1"
+      <h1>
         Welcome to Afsha's Portfolio !
       </h1>
-      <nav class="text-lg">
-        <ul>
-          <li><a href="#about">More about Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+      <nav>
+        <div class="flex flex-row space-x-7">
+          <button class="rounded-lg bg-blue-100 px-1"><a href="#about">About Me</a></button>
+          <button class="rounded-lg bg-blue-100 px-1"><a href="#projects">Projects</a></button>
+          <button class="rounded-lg bg-blue-100 px-1"><a href="#contact">Contact</a></button>
+        </div>
       </nav>
     </header>
     <main tabindex="0">
-      <section id="about" class="m-4">
+      <section id="about" class="mx-2 ">
         <header class="font-semibold">
           <h2>About Me</h2>
         </header>
         <ul>
-          <li>I live in London</li>
+          <li>I am a software developer living in London.</li>
           <li>
-            I am currently getting trained at Code Your Future to become a
-            software engineer.
+            I am currently getting trained at Code Your Future, which is a 1 year full-stack software developer programme.
           </li>
         </ul>
       </section>
       <section id="projects" class="m-4">
         <header class="font-semibold">
-          <h2>Here are some of my projects:</h2>
+          <h2>Below are some of the projects I worked on...</h2>
         </header>
+        <div class="m-5">
+          <h3 class="font-semibold">YouTube Video Storage App</h3>
+          <p>I've created this responsive video storage app using React to build the front end, Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database.</p>
+          <a href="https://github.com/Afsha10/Full-Stack-Project-Assessment" target="_blank"
+            >GitHub</a
+          >
+          <a href="https://afsha-youtube-video-storage.netlify.app/" target="_blank">
+            <img
+              src="images/VideoStorageApp.png" 
+              alt="Afsha's full stack video storage app" class="w-64" 
+            />
+          </a>
+        </div>
         <div class="m-5">
           <h3 class="font-semibold">CYF Hotel React</h3>
           <p>A hotel website created using HTML, CSS, and React.</p>
@@ -77,7 +89,7 @@
           >
           <a href="https://afsha-hotel-react.netlify.app/" target="_blank">
             <img
-              src="images/cyfhotels.png" 
+              src="images/CyfHotel.png" 
               alt="CYF Hotel React Preview" class="w-64" 
             />
           </a>
@@ -95,7 +107,7 @@
           >
           <a href="https://cyf-afsha10-tvv.netlify.app/" target="_blank">
             <img
-              src="images/tvdom.png"
+              src="images/TvDom.png"
               alt="TV Show Webpage Preview" class="w-64"
             />
           </a>
@@ -110,7 +122,7 @@
           >
           <a href="https://cakes-co-project.netlify.app/" target="_blank">
             <img
-              src="images/ResponsiveCakewebpage.png"
+              src="images/ResponsiveCakeWebpageMobile.png"
               alt="HTML & CSS Coursework Preview" class="w-64"
             />
           </a>
