--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="project1">
             <p>
               Web page developed to help refugees access bicycles, utilizing
-              HTML, CSS, and Flexbox for layout.
+              HTML, CSS, and Flexboxes for layout.
             </p>
             <img src="bikes_for_refugees.jpg" alt="an image of a bike" />
             <p>
