--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </main>
     <footer>
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/BerwinE/Portfolio.git"
           ><svg
             focusable="false"
             role="presentation"
