--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Zahra Khademi</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -49,13 +49,9 @@
     </header>
     <main tabindex="0">
       <section id="about">
-        <header><h2>About Me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <h1>Hello !</h1>
+        <p>My name is Zahra</p>
+        <p>and I am a Web Developer</p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
