contact info added and contact links done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap" rel="stylesheet" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
 </head>
 
 <body>
@@ -33,18 +36,23 @@
         <div id="about-text">
           <p>
             As a tech and science enthusiast, I have always loved knowing how the universe works and how I can help to
-            improve people's lives. This passion led me to choose a career as a science teacher (physics, mathematics and
+            improve people's lives. This passion led me to choose a career as a science teacher (physics, mathematics
+            and
             robotics). After a few years of teaching, I realised that I had great potential to contribute to the tech
-            industry. Confident that the skills and expertise I developed add really well to the tech career, I decided to
+            industry. Confident that the skills and expertise I developed add really well to the tech career, I decided
+            to
             migrate to it.
           </p>
           <p>
             I started my studies in front-end web development with the famous triad: HTML, CSS and
-            JavaScript. Nowadays, I am fully engaged in the CYF Course, keeping React, Next.js, and Typescript on my radar.
+            JavaScript. Nowadays, I am fully engaged in the CYF Course, keeping React, Next.js, and Typescript on my
+            radar.
           </p>
           <p>
-            Well, feel free to check out my portfolio. I'm still in the beginning, but there's already a lot of affection
-            and dedication involved. If you liked what you saw, get in touch. I am always available to help, share and learn.
+            Well, feel free to check out my portfolio. I'm still in the beginning, but there's already a lot of
+            affection
+            and dedication involved. If you liked what you saw, get in touch. I am always available to help, share and
+            learn.
           </p>
         </div>
       </article>
@@ -55,13 +63,25 @@
       </header>
       <section id="projects-list">
         <article class="project polaroid">
-          <img src="https://github.com/PERicci/Pomodoro-Timer/raw/main/public/screenshotPC.png"
-            alt="pomodoro timer image preview" class="project-image">
-          <h3 class="project-name">Pomodoro Timer</h3>
-          <p class="project-description">A Pomodoro Timer application built with React and TypeScript</p>
+          <img src="assets/oldPortfolio.png" alt="pomodoro timer image preview" class="project-image">
+          <h3 class="project-name">Personal Page</h3>
+          <p class="project-description">Personal Page made for CYF Fundamentals Course using HTML, CSS and JavaScript
+          </p>
           <section class="project-links">
-            <a href="https://github.com/PERicci/Pomodoro-Timer" target="_blank" rel="noopener noreferrer">Project</a>
-            <a href="https://pericci.github.io/Pomodoro-Timer/" target="_blank" rel="noopener noreferrer">Live Demo</a>
+            <a href="https://github.com/PERicci/CYF-Pedro-Personal-Page" target="_blank"
+              rel="noopener noreferrer">Project</a>
+            <a href="https://pedro-ricciardi-portfolio.netlify.app/" target="_blank" rel="noopener noreferrer">Live
+              Demo</a>
+          </section>
+        </article>
+        <article class="project polaroid">
+          <img src="assets/imageCarousel.png" alt="pomodoro timer image preview" class="project-image">
+          <h3 class="project-name">Image Carousel</h3>
+          <p class="project-description">A Image Carousel application built with HTMl, CSS and JavaScript</p>
+          <section class="project-links">
+            <a href="https://github.com/PERicci/CYF-Image-Carousel" target="_blank"
+              rel="noopener noreferrer">Project</a>
+            <a href="https://pedro-image-carousel.netlify.app/" target="_blank" rel="noopener noreferrer">Live Demo</a>
           </section>
         </article>
       </section>
@@ -71,14 +91,10 @@
         <h2>Contact me</h2>
       </header>
       <section id="contacts-info">
-        <article id="social">
-          <a href="https://github.com/PERicci" target="_blank" rel="noopener noreferrer">GitHub</a>
-          <a href="https://www.linkedin.com/in/pedro-ricciardi/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-          <a href="https://pericci.github.io/" target="_blank" rel="noopener noreferrer">More about me</a>
-        </article>
-        <article id="email">
-          <a href="mailto:riccip@outlook.com"></a>
-        </article>
+        <a href="https://github.com/PERicci" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a href="https://www.linkedin.com/in/pedro-ricciardi/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a href="https://pericci.github.io/" target="_blank" rel="noopener noreferrer">More About Me</a>
+        <a href="mailto:riccip@outlook.com">Email</a>
       </section>
     </section>
   </main>
