I added my own personal portfolio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Bakhat Begum</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,28 +51,35 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          I am currently studying software development bootcamp at
+          CodeYourFuture. I am a hardworking student who is committed to
+          pursuing my goals in becoming a software developer and advancing my
+          career in tech field.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          HTML-and-CSS-Module-Project is a project module from CodeYourFuture.
+          Initially it was an empty website. As being a part of Software
+          Development trine, I worked on HTML and CSS to create my own design.
+          such as adding several tags, elements, navigation, header, footer,
+          headings, main, sections, articles, attributes, semantic HTML, layout
+          , page content and images.
+        </p>
+        <p>
+          Bikes-for-refugees was my first website on CodeYourFuture. The website
+          needed to replace Div's with semantic HTML, change img broken links,
+          use alt, added hover, font color, button style, layout and to use
+          grids.
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Number : 07858625768 <br />
+          <span> Email Address : bakhtbagum@gmail.com</span><br />
+          <span>Link to LinkedIn : https://www.linkedin.com/feed/</span>
         </p>
       </section>
     </main>
