Adding About me information in the HTML file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Orlando Morales Kuan</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,10 +51,12 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          My name is Orlando Morales, I am from Nicaragua, I worked as Civil 
+          Engineer supervising, making budgets, designing and drawing plans for 
+          projects. I like new challenges and always improve myself learning new 
+          skills. I always have had some interest for IT so now I am learning how 
+          to become a Software Developer, I am a traineeI from CYF Course and I 
+          alway try to do my best to reach my goals. 
         </p>
       </section>
       <section id="projects">
@@ -78,7 +80,7 @@
     </main>
     <footer>
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/OrlandoMoralesKuan"
           ><svg
             focusable="false"
             role="presentation"
