--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Haythem Mohammed</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
