My own personal work experience portfolio

--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          HTML-and-CSS-Module-Project is a project module from CodeYourFuture.
-          Initially it was an empty website. As being a part of Software
-          Development trine, I worked on HTML and CSS to create my own design.
-          such as adding several tags, elements, navigation, header, footer,
-          headings, main, sections, articles, attributes, semantic HTML, layout
-          , page content and images.
-        </p>
-        <p>
-          Bikes-for-refugees was my first website on CodeYourFuture. The website
-          needed to replace Div's with semantic HTML, change img broken links,
-          use alt, added hover, font color, button style, layout and to use
-          grids.
+          Passenger-Account, Blackjack-game, Mobile-configure and
+          Basic-calculater is my own project that I have created during my
+          spare time.
+
+          <p>Link to my works:</p>
+
+          <p>
+          https://github.com/BakhatBegum/Blackjack-game<br />
+          https://github.com/BakhatBegum/Mobile-configure<br />
+          https://github.com/BakhatBegum/Basic-Calculater<br />
+          https://github.com/BakhatBegum/Passenger-Account<br />
+          </p>
         </p>
       </section>
       <section id="contact">
